added most styling

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,300&display=swap');
 
-* {
-font-family: 'Roboto', sans-serif;
+body {
+    font-family: 'Roboto', sans-serif;
 }
 ul {
     list-style: none;
@@ -20,9 +20,8 @@ body {
     display: flex;
     flex-direction: column;
     background-color: #1F2937;
-    padding: 0 10% 10% 10%;
 }
-.header a, .card-text {
+.header a, .card-text, .card-button {
     color: #e5e7eb;
     font-size: 18px;
 }
@@ -39,7 +38,7 @@ body {
     display: flex;
     justify-content: space-between;
     width: auto;
-    padding: 16px 0;
+    padding: 16px 10%;
 }
 .nav li {
     color: #e5e7eb;
@@ -47,18 +46,26 @@ body {
 }
 .hero {
     display: flex;
-    justify-content: space-between;
-    padding-top: 10%;
-    gap: 10%;
+    padding: 32px 10%;
     flex: 1;
+    gap: 10%;
 }
 .hero-card {
-    flex 1;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    justify-content: space-between;
 }
 .card-title {
     color: #f9faf8;
     font-size: 48px;
     font-weight: 900;
+}
+.card-button {
+    width: fit-content;
+    background-color: #3882f6;
+    padding: 16px 24px;
+    border-radius: 8px;
 }
 .hero-img {
     flex: 1;
@@ -68,4 +75,62 @@ body {
     max-height: 100%;
     width: auto;
     height: auto;
+}
+.info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 10%;
+}
+.info-title {
+    font-size: 36px;
+    color: #1f2937;
+    font-weight: 900;
+    margin-bottom: 32px;
+}
+.info-content {
+    display: flex;
+    gap: 16px;
+}
+.info-content div {
+    display: flex;
+    flex-direction: column;
+    flex: 1 0 0;
+    color: #1F2937;
+    text-align: center;
+    gap: 8px;
+}
+.info-content img {
+    border: 4px solid #3882f6;
+    border-radius: 8px;
+    filter: opacity(75%);
+}
+.quote-area {
+    display: flex;
+    flex-direction: column;
+    background-color: #e5e7eb;
+    padding: 10%;
+}
+.quote {
+    font-weight: 300;
+    font-style: italic;
+    font-size: 32px;
+}
+.author {
+    font-size: 32px;
+    align-self: flex-end;
+}
+.signup {
+    display: flex;
+    padding: 10%;
+}
+.call {
+    background-color: #3882f6;
+    border-radius: 16px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex: 1;
+    padding: 32px;
 }
